Sonar improvement